--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@ Jaesik Park is an Assistant Professor at <a href="https://en.snu.ac.kr/" target=
 			<h2>News</h2>
 			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
+					2023.11. I will serve as an Area Chair for <b>ECCV 2024</b>.
+				</li>
+				<li class="list-group-item">
 					2023.09. A paper about <a href="publications.html#Shin_Binary_arXiv_2023">compact neural radiance fields</a> is accepted to <b>NeurIPS 2023</b>.
 				</li>
 				<li class="list-group-item">
@@ -88,15 +91,15 @@ Jaesik Park is an Assistant Professor at <a href="https://en.snu.ac.kr/" target=
 				<li class="list-group-item">
 					2023.07. A paper about <a href="publications.html#Choe_Spacetime_ICCV_2023">neural dynamic scene reconstruction</a> is accepted to <b>ICCV 2023</b>.
 				</li>
-				<li class="list-group-item">
-					2023.05. I will serve as an Area Chair for <b>CVPR 2024</b>.
-				</li>
 			</ul>
 			<button class="btn btn-outline-secondary shadow-sm" type="button" data-bs-toggle="collapse" data-bs-target="#previousNews" aria-expanded="false" aria-controls="previousNews">
 				Previous &#9661;
 			</button>
 			<div class="collapse" id="previousNews">
 				<ul class="list-group shadow-sm">
+					<li class="list-group-item">
+						2023.05. I will serve as an Area Chair for <b>CVPR 2024</b>.
+					</li>
 					<li class="list-group-item">
 						2023.05. I will serve as a Technical Papers Committee for <b>SIGGRAPH ASIA 2023</b>.
 					</li>
