releasing BiRF code

--- a/publications.html
+++ b/publications.html
@@ -103,6 +103,7 @@
 			<p>
 				<a href="https://seungjooshin.github.io/BiRF" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
 				<a href="https://arxiv.org/abs/2306.07581" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a href="https://github.com/SAITPublic/BiRF" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Shin_Binary_NeurIPS_2023_bibtex_button" aria-expanded="false" aria-controls="Shin_Binary_NeurIPS_2023_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Shin_Binary_NeurIPS_2023_bibtex_button">
