--- a/lab.html
+++ b/lab.html
@@ -70,12 +70,6 @@
 			Ph.D. student
 		</div>
 		<div class="col-md-3 text-center">
-			<img src="source/members/dongmin.jpg" class="rounded-circle img-thumbnail shadow mb-2">
-			<h5>Dongmin You</h5>
-			2022 Spring<br>
-			MS student
-		</div>
-		<div class="col-md-3 text-center">
 			<img src="source/members/pierre.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Pierre E. MUSACCHIO</h5>
 			2023 Fall<br>
@@ -133,6 +127,12 @@
 	<div class="row gx-4 gy-4">
 		<h3>Past members</h3>
 		<div class="col-md-2 text-center">
+			<img src="source/members/dongmin.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<h5>Dongmin You</h5>
+			2022S - 2023F<br>
+			MS degree (POSTECH)
+		</div>
+		<div class="col-md-2 text-center">
 			<img src="source/members/jaesung.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Jaesung Choe</h5>
 			2023 Summer<br>
@@ -150,7 +150,7 @@
 			<h5>Seungjoo Shin</h5>
 			2021F - 2023S<br>
 			MS degree (POSTECH)<br>
-			2023 Fall - current<br>
+			2023F - current<br>
 			Ph.D. student (POSTECH)
 		</div>
 		<div class="col-md-2 text-center">
@@ -179,7 +179,7 @@
 			<h5>Chunghyun Park</h5>
 			2020S - 2021F<br>
 			MS degree (POSTECH)<br>
-			2022 Spring - current<br>
+			2022S - current<br>
 			Ph.D. student (POSTECH)
 		</div>
 		<div class="col-md-2 text-center">
