adding humantech award

--- a/publications.html
+++ b/publications.html
@@ -99,6 +99,7 @@
 			<p class="text-muted">
 				Seungjoo Shin and <b>Jaesik Park</b>.
 				<em>Conf. on Neural Information Processing Systems (<b>NeurIPS</b>), 2023</em>
+				<br>(Received 30th <b>HumanTech Paper Award (Silver Prize)</b>, Samsung Electronics Corp.)
 			</p>
 			<p>
 				<a href="https://seungjooshin.github.io/BiRF" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
