--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@ Jaesik Park is an Assistant Professor at <a href="https://en.snu.ac.kr/" target=
 			<h2>News</h2>
 			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
+					2024.01. Our binary radiance field paper received 30th <b>Samsung HumanTech Paper Award</b> (Silver Prize).
+				</li>
+				<li class="list-group-item">
+					2024.01. Our stereo SLAM paper is got invited to <b>ICRA 2024</b> as an <b>oral</b> presentation.
+				</li>
+				<li class="list-group-item">
 					2023.11. I will serve as an Area Chair for <b>ECCV 2024</b>.
 				</li>
 				<li class="list-group-item">
@@ -85,18 +91,18 @@ Jaesik Park is an Assistant Professor at <a href="https://en.snu.ac.kr/" target=
 				<li class="list-group-item">
 					2023.09. I will serve as an Associate Editor for <b>ICRA 2024</b>.
 				</li>
-				<li class="list-group-item">
-					2023.08. Our <a href="publications.html#Kang_StudioGAN_TPAMI_2023">StudioGAN paper</a> is accepted to <b>TPAMI</b> (with 3.2k GitHub stars).
-				</li>
-				<li class="list-group-item">
-					2023.07. A paper about <a href="publications.html#Choe_Spacetime_ICCV_2023">neural dynamic scene reconstruction</a> is accepted to <b>ICCV 2023</b>.
-				</li>
 			</ul>
 			<button class="btn btn-outline-secondary shadow-sm" type="button" data-bs-toggle="collapse" data-bs-target="#previousNews" aria-expanded="false" aria-controls="previousNews">
 				Previous &#9661;
 			</button>
 			<div class="collapse" id="previousNews">
 				<ul class="list-group shadow-sm">
+					<li class="list-group-item">
+						2023.08. Our <a href="publications.html#Kang_StudioGAN_TPAMI_2023">StudioGAN paper</a> is accepted to <b>TPAMI</b> (with 3.2k GitHub stars).
+					</li>
+					<li class="list-group-item">
+						2023.07. A paper about <a href="publications.html#Choe_Spacetime_ICCV_2023">neural dynamic scene reconstruction</a> is accepted to <b>ICCV 2023</b>.
+					</li>
 					<li class="list-group-item">
 						2023.05. I will serve as an Area Chair for <b>CVPR 2024</b>.
 					</li>
