--- a/data/news.html
+++ b/data/news.html
@@ -1,5 +1,5 @@
-2024.01. Our binary radiance field paper received 30th <b>Samsung HumanTech Paper Award</b> (Silver Prize).
-2024.01. Our stereo SLAM paper is got invited to <b>ICRA 2024</b> as an <b>oral</b> presentation.
+2024.01. Our binary radiance field paper received the 30th <b>Samsung HumanTech Paper Award</b> (Silver Prize).
+2024.01. Our stereo SLAM paper has been invited to <b>ICRA 2024</b> as an <b>oral</b> presentation.
 2023.11. I will serve as an Area Chair for <b>ECCV 2024</b>.
 2023.09. A paper about <a href="publications.html#Shin_Binary_arXiv_2023">compact neural radiance fields</a> is accepted to <b>NeurIPS 2023</b>.
 2023.09. Our <a href="publications.html#Kang_Scaling_CVPR_2023">GigaGAN paper</a> has been featured in <a href="https://www.youtube.com/watch?v=UyoXmHS-KGc&ab_channel=TwoMinutePapers" target="_blank">Two Minutes Papers</a> YouTube channel. 
