--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@ Jaesik Park is an Assistant Professor at <a href="https://en.snu.ac.kr/" target=
 			<h2>News</h2>
 			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
-					2024.01. Our binary radiance field paper received 30th <b>Samsung HumanTech Paper Award</b> (Silver Prize).
+					2024.01. Our binary radiance field paper received the 30th <b>Samsung HumanTech Paper Award</b> (Silver Prize).
 				</li>
 				<li class="list-group-item">
-					2024.01. Our stereo SLAM paper is got invited to <b>ICRA 2024</b> as an <b>oral</b> presentation.
+					2024.01. Our stereo SLAM paper has been invited to <b>ICRA 2024</b> as an <b>oral</b> presentation.
 				</li>
 				<li class="list-group-item">
 					2023.11. I will serve as an Area Chair for <b>ECCV 2024</b>.
