--- a/data/news.html
+++ b/data/news.html
@@ -1,3 +1,4 @@
+2024.02. Our group is <b>hiring Postdoctoral Researcher</b>. Please contact me if you are interested (deadline: Feb. 28).
 2024.01. Our binary radiance field paper received the 30th <b>Samsung HumanTech Paper Award</b> (Silver Prize).
 2024.01. Our stereo SLAM paper has been invited to <b>ICRA 2024</b> as an <b>oral</b> presentation.
 2023.11. I will serve as an Area Chair for <b>ECCV 2024</b>.
