--- a/data/news.html
+++ b/data/news.html
@@ -1,7 +1,7 @@
-2024.02. Our group is <b>hiring Postdoctoral Researcher</b>. Please contact me if you are interested (deadline: Feb. 28).
+2024.02. Two papers got accepted to <b>CVPR 2024</b>.
 2024.01. Our binary radiance field paper received the 30th <b>Samsung HumanTech Paper Award</b> (Silver Prize).
 2024.01. Our stereo SLAM paper has been invited to <b>ICRA 2024</b> as an <b>oral</b> presentation.
-2023.11. I will serve as an Area Chair for <b>ECCV 2024</b>.
+2023.11. I will serve as an Lead Area Chair for <b>ECCV 2024</b>.
 2023.09. A paper about <a href="publications.html#Shin_Binary_arXiv_2023">compact neural radiance fields</a> is accepted to <b>NeurIPS 2023</b>.
 2023.09. Our <a href="publications.html#Kang_Scaling_CVPR_2023">GigaGAN paper</a> has been featured in <a href="https://www.youtube.com/watch?v=UyoXmHS-KGc&ab_channel=TwoMinutePapers" target="_blank">Two Minutes Papers</a> YouTube channel. 
 2023.09. After spending four and half great years at <a href="https://postech.ac.kr/eng/" target="_blank">POSTECH</a>, I joined <a href="https://cse.snu.ac.kr/" target="_blank">CSE</a> & <a href="https://gsai.snu.ac.kr/" target="_blank">GSAI</a> at <a href="https://en.snu.ac.kr/" target="_blank">Seoul National University</a>.
