--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Jaesik Park is an Assistant Professor at <a href="https://en.snu.ac.kr/" target=
 			<h2>News</h2>
 			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
-					2024.02. Our group is <b>hiring Postdoctoral Researcher</b>. Please contact me if you are interested (deadline: Feb. 28).
+					2024.02. Two papers got accepted to <b>CVPR 2024</b>.
 				</li>
 				<li class="list-group-item">
 					2024.01. Our binary radiance field paper received the 30th <b>Samsung HumanTech Paper Award</b> (Silver Prize).
@@ -80,7 +80,7 @@ Jaesik Park is an Assistant Professor at <a href="https://en.snu.ac.kr/" target=
 					2024.01. Our stereo SLAM paper has been invited to <b>ICRA 2024</b> as an <b>oral</b> presentation.
 				</li>
 				<li class="list-group-item">
-					2023.11. I will serve as an Area Chair for <b>ECCV 2024</b>.
+					2023.11. I will serve as an Lead Area Chair for <b>ECCV 2024</b>.
 				</li>
 				<li class="list-group-item">
 					2023.09. A paper about <a href="publications.html#Shin_Binary_arXiv_2023">compact neural radiance fields</a> is accepted to <b>NeurIPS 2023</b>.
