--- a/publications.html
+++ b/publications.html
@@ -60,6 +60,73 @@
 <div class="container mt-4">
 <div class="row">
 	<div class="col-lg-12 text-start">
+		<h2>2024</h2>
+	</div>
+</div>
+</div>
+
+<div class="container">
+	<div class="row gx-5 gy-4">
+		<div class="col-lg-4 text-center" id="Kumar_PickorMix_CVPR_2024">
+			<img src="publications/data/24_cvpr1.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>Pick-or-Mix: Dynamic Channel Sampling for ConvNets</h4>
+			<p class="text-muted">
+				Ashish Kumar, Daneul Kim, <b>Jaesik Park</b>, and Laxmidhar Behera.
+				<em>Int. Conf. on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2024</em>
+			</p>
+			<p>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kumar_PickorMix_CVPR_2024_bibtex_button" aria-expanded="false" aria-controls="Kumar_PickorMix_CVPR_2024_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Kumar_PickorMix_CVPR_2024_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@inproceedings{Kumar_PickorMix_CVPR_2024,<br>
+							Title={Pick-or-Mix: Dynamic Channel Sampling for ConvNets},<br>
+							Author={Ashish Kumar and Daneul Kim and Jaesik Park and Laxmidhar Behera},<br>
+							Booktitle={Proceedings of the Int. Conf. on Computer Vision and Pattern Recognition (CVPR)},<br>
+							Year={2024}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-lg-4 text-center" id="Park_Learning_CVPR_2024">
+			<img src="publications/data/24_cvpr2.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4 class="em-tight">Learning SO(3)-Invariant Semantic Correspondence via Local Shape Transform</h4>
+			<p class="text-muted">
+				Chunghyun Park, Seungwook Kim, <b>Jaesik Park</b>, and Minsu Cho.
+				<em>Int. Conf. on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2024</em>
+			</p>
+			<p>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Park_Learning_CVPR_2024_bibtex_button" aria-expanded="false" aria-controls="Park_Learning_CVPR_2024_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Park_Learning_CVPR_2024_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@inproceedings{Park_Learning_CVPR_2024,<br>
+							Title={Learning SO(3)-Invariant Semantic Correspondence via Local Shape Transform},<br>
+							Author={Chunghyun Park and Seungwook Kim and Jaesik Park and Minsu Cho},<br>
+							Booktitle={Proceedings of the Int. Conf. on Computer Vision and Pattern Recognition (CVPR)},<br>
+							Year={2024}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="container mt-4">
+	<hr class="py-1">
+</div>
+
+<div class="container mt-4">
+<div class="row">
+	<div class="col-lg-12 text-start">
 		<h2>2023</h2>
 	</div>
 </div>
