--- a/source/html/lab.html
+++ b/source/html/lab.html
@@ -69,7 +69,7 @@
 			<h5>Jaeah Lee</h5>
 			2024 Spring<br>
 			Integrated Ph.D. student<br>
-			<a href="https://github.com/hayanz" target="_blank">Homepage</a>
+			<a href="https://jaeah.me" target="_blank">Homepage</a>
 		</div>
 		<div class="col-md-3 text-center">
 			<img src="source/members/sangmin.jpg" class="rounded-circle img-thumbnail shadow mb-2">
