--- a/data/news.html
+++ b/data/news.html
@@ -1,3 +1,4 @@
+2024.03. A paper about referring image segmentation is accepted to <b>NAACL 2024</b>.
 2024.02. Two papers got accepted to <b>CVPR 2024</b>.
 2024.01. Our binary radiance field paper received the 30th <b>Samsung HumanTech Paper Award</b> (Silver Prize).
 2024.01. Our stereo SLAM paper has been invited to <b>ICRA 2024</b> as an <b>oral</b> presentation.
