--- a/publications.html
+++ b/publications.html
@@ -67,6 +67,31 @@
 
 <div class="container">
 	<div class="row gx-5 gy-4">
+		<div class="col-lg-4 text-center" id="Kim_Extending_NAACL_2024">
+			<img src="publications/data/24_naacl.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4 class="em-tight">Extending CLIP's Image-Text Alignment to Referring Image Segmentation</h4>
+			<p class="text-muted">
+				Seoyeon Kim, Minguk Kang, Dongwon Kim, <b>Jaesik Park</b>, and Suha Kwak.
+				<em>Annual Conf. of the North American Chapter of the Assoc. for Computational Linguistics (<b>NAACL</b>), 2024</em>
+			</p>
+			<p>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kim_Extending_NAACL_2024_bibtex_button" aria-expanded="false" aria-controls="Kim_Extending_NAACL_2024_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Kim_Extending_NAACL_2024_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@inproceedings{Kim_Extending_NAACL_2024,<br>
+							Title={Extending CLIP's Image-Text Alignment to Referring Image Segmentation},<br>
+							Author={Seoyeon Kim and Minguk Kang and Dongwon Kim and Jaesik Park and Suha Kwak},<br>
+							Booktitle={Proceedings of the Annual Conf. of the North American Chapter of the Assoc. for Computational Linguistics (NAACL)},<br>
+							Year={2024}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="col-lg-4 text-center" id="Kumar_PickorMix_CVPR_2024">
 			<img src="publications/data/24_cvpr1.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4>Pick-or-Mix: Dynamic Channel Sampling for ConvNets</h4>
