--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@ Jaesik Park is an Assistant Professor at <a href="https://en.snu.ac.kr/" target=
 			<h2>News</h2>
 			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
+					2024.03. A paper about referring image segmentation is accepted to <b>NAACL 2024</b>.
+				</li>
+				<li class="list-group-item">
 					2024.02. Two papers got accepted to <b>CVPR 2024</b>.
 				</li>
 				<li class="list-group-item">
@@ -88,15 +91,15 @@ Jaesik Park is an Assistant Professor at <a href="https://en.snu.ac.kr/" target=
 				<li class="list-group-item">
 					2023.09. Our <a href="publications.html#Kang_Scaling_CVPR_2023">GigaGAN paper</a> has been featured in <a href="https://www.youtube.com/watch?v=UyoXmHS-KGc&ab_channel=TwoMinutePapers" target="_blank">Two Minutes Papers</a> YouTube channel. 
 				</li>
-				<li class="list-group-item">
-					2023.09. After spending four and half great years at <a href="https://postech.ac.kr/eng/" target="_blank">POSTECH</a>, I joined <a href="https://cse.snu.ac.kr/" target="_blank">CSE</a> & <a href="https://gsai.snu.ac.kr/" target="_blank">GSAI</a> at <a href="https://en.snu.ac.kr/" target="_blank">Seoul National University</a>.
-				</li>
 			</ul>
 			<button class="btn btn-outline-secondary shadow-sm" type="button" data-bs-toggle="collapse" data-bs-target="#previousNews" aria-expanded="false" aria-controls="previousNews">
 				Previous &#9661;
 			</button>
 			<div class="collapse" id="previousNews">
 				<ul class="list-group shadow-sm">
+					<li class="list-group-item">
+						2023.09. After spending four and half great years at <a href="https://postech.ac.kr/eng/" target="_blank">POSTECH</a>, I joined <a href="https://cse.snu.ac.kr/" target="_blank">CSE</a> & <a href="https://gsai.snu.ac.kr/" target="_blank">GSAI</a> at <a href="https://en.snu.ac.kr/" target="_blank">Seoul National University</a>.
+					</li>
 					<li class="list-group-item">
 						2023.09. I will serve as an Associate Editor for <b>ICRA 2024</b>.
 					</li>
