--- a/data/news.html
+++ b/data/news.html
@@ -1,5 +1,6 @@
 2024.03. A paper about referring image segmentation is accepted to <b>NAACL 2024</b>.
 2024.02. Two papers got accepted to <b>CVPR 2024</b>.
+2024.01. Launching <a href="https://github.com/isl-org/Open3D/releases/tag/v0.18.0"><b>Open3D v0.18</b></a> (receiving 10.0k+1.6k GitHub stars).
 2024.01. Our binary radiance field paper received the 30th <b>Samsung HumanTech Paper Award</b> (Silver Prize).
 2024.01. Our stereo SLAM paper has been invited to <b>ICRA 2024</b> as an <b>oral</b> presentation.
 2023.11. I will serve as a Lead Area Chair for <b>ECCV 2024</b>.
