--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ Jaesik Park is an Assistant Professor at <a href="https://en.snu.ac.kr/" target=
 					2024.02. Two papers got accepted to <b>CVPR 2024</b>.
 				</li>
 				<li class="list-group-item">
-					2024.01. Launching <a href="https://github.com/isl-org/Open3D/releases/tag/v0.18.0"><b>Open3D v0.18</b></a> (receiving 10.0k+1.6k GitHub stars).
+					2024.01. Launching <a href="https://github.com/isl-org/Open3D/releases/tag/v0.18.0" target="_blank"><b>Open3D v0.18</b></a> (receiving 10.0k+1.6k GitHub stars).
 				</li>
 				<li class="list-group-item">
 					2024.01. Our binary radiance field paper received the 30th <b>Samsung HumanTech Paper Award</b> (Silver Prize).
