--- a/source/html/lab.html
+++ b/source/html/lab.html
@@ -27,7 +27,7 @@
 		</div>
 		<div class="col-md-3 text-center">
 			<img src="source/members/pierre.jpg" class="rounded-circle img-thumbnail shadow mb-2">
-			<h5>Pierre E. MUSACCHIO</h5>
+			<h5>Pierre E. Musacchio</h5>
 			2023 Fall<br>
 			Integrated Ph.D. student
 		</div>
@@ -76,6 +76,12 @@
 			<h5>Sang Min Kim</h5>
 			2024 Spring<br>
 			Integrated Ph.D. student<br>
+		</div>
+		<div class="col-md-3 text-center">
+			<img src="source/members/milo.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<h5>Milo Deroussi</h5>
+			2024 Fall<br>
+			Exchange student (master)<br>
 		</div>
 	</div>
 </div>
