--- a/data/news.html
+++ b/data/news.html
@@ -1,3 +1,4 @@
+2024.05. A paper about 3D strokes reconstruction from multi-view images is accepted to <b>SIGGRAPH 2024</b>.
 2024.03. A paper about referring image segmentation is accepted to <b>NAACL 2024</b>.
 2024.02. Two papers got accepted to <b>CVPR 2024</b>.
 2024.01. Launching <a href="https://github.com/isl-org/Open3D/releases/tag/v0.18.0" target="_blank"><b>Open3D v0.18</b></a> (receiving 10.0k+1.6k GitHub stars).
