--- a/publications.html
+++ b/publications.html
@@ -67,6 +67,31 @@
 
 <div class="container">
 	<div class="row gx-5 gy-4">
+		<div class="col-lg-4 text-center" id="Choi_3Doodle_Journal_Track_Acceptance_2024">
+			<img src="publications/data/24_siggraph.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>3Doodle: Compact Abstraction of Objects with 3D Strokes</h4>
+			<p class="text-muted">
+				Changwoon Choi, Jaeah Lee, <b>Jaesik Park</b>, and Young Min Kim.
+				<em>ACM <b>SIGGRAPH</b> (Journal Track Acceptance), 2024</em>
+			</p>
+			<p>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Choi_3Doodle_Journal_Track_Acceptance_2024_bibtex_button" aria-expanded="false" aria-controls="Choi_3Doodle_Journal_Track_Acceptance_2024_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Choi_3Doodle_Journal_Track_Acceptance_2024_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@inproceedings{Choi_3Doodle_Journal_Track_Acceptance_2024,<br>
+							Title={3Doodle: Compact Abstraction of Objects with 3D Strokes},<br>
+							Author={Changwoon Choi and Jaeah Lee and Jaesik Park and Young Min Kim},<br>
+							Booktitle={Proceedings of the ACM SIGGRAPH (Journal Track Acceptance)},<br>
+							Year={2024}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="col-lg-4 text-center" id="Kim_Extending_NAACL_2024">
 			<img src="publications/data/24_naacl.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4 class="em-tight">Extending CLIP's Image-Text Alignment to Referring Image Segmentation</h4>
