minor update for milo

--- a/source/html/lab.html
+++ b/source/html/lab.html
@@ -82,6 +82,7 @@
 			<h5>Milo Deroussi</h5>
 			2024 Fall<br>
 			Exchange student (master)<br>
+			<a href="https://github.com/MiloDeroussi" target="_blank">Homepage</a>
 		</div>
 	</div>
 </div>
