--- a/lab.html
+++ b/lab.html
@@ -137,14 +137,15 @@
 			<img src="source/members/dongmin.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Dongmin You</h5>
 			2022S - 2023F<br>
-			MS degree (POSTECH)
+			MS degree (POSTECH)<br>
+			GenGenAI
 		</div>
 		<div class="col-md-2 text-center">
 			<img src="source/members/jaesung.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Jaesung Choe</h5>
 			2023 Summer<br>
 			Post Doc. Researcher<br>
-			Nvidia
+			NVIDIA
 		</div>
 		<div class="col-md-2 text-center">
 			<img src="source/members/seoyeon.jpg" class="rounded-circle img-thumbnail shadow mb-2">
