--- a/publications.html
+++ b/publications.html
@@ -67,24 +67,25 @@
 
 <div class="container">
 	<div class="row gx-5 gy-4">
-		<div class="col-lg-4 text-center" id="Choi_3Doodle_Journal_Track_Acceptance_2024">
+		<div class="col-lg-4 text-center" id="Choi_3Doodle_SIGGRAPH_2024">
 			<img src="publications/data/24_siggraph.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4>3Doodle: Compact Abstraction of Objects with 3D Strokes</h4>
 			<p class="text-muted">
 				Changwoon Choi, Jaeah Lee, <b>Jaesik Park</b>, and Young Min Kim.
-				<em>ACM <b>SIGGRAPH</b> (Journal Track Acceptance), 2024</em>
+				<em>ACM Special Interest Group on Graphics and Interactive Techniques (<b>SIGGRAPH</b>), 2024</em>
+				<br>(Accepted as a journal track paper)
 			</p>
 			<p>
-				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Choi_3Doodle_Journal_Track_Acceptance_2024_bibtex_button" aria-expanded="false" aria-controls="Choi_3Doodle_Journal_Track_Acceptance_2024_bibtex_button">BibTeX</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Choi_3Doodle_SIGGRAPH_2024_bibtex_button" aria-expanded="false" aria-controls="Choi_3Doodle_SIGGRAPH_2024_bibtex_button">BibTeX</a>
 			</p>
-			<div class="collapse" id="Choi_3Doodle_Journal_Track_Acceptance_2024_bibtex_button">
+			<div class="collapse" id="Choi_3Doodle_SIGGRAPH_2024_bibtex_button">
 				<div class="card">
 					<div class="card-body">
 						<p class="card-text text-start fw-lighter">
-							@inproceedings{Choi_3Doodle_Journal_Track_Acceptance_2024,<br>
+							@inproceedings{Choi_3Doodle_SIGGRAPH_2024,<br>
 							Title={3Doodle: Compact Abstraction of Objects with 3D Strokes},<br>
 							Author={Changwoon Choi and Jaeah Lee and Jaesik Park and Young Min Kim},<br>
-							Booktitle={Proceedings of the ACM SIGGRAPH (Journal Track Acceptance)},<br>
+							Booktitle={Proceedings of the ACM Special Interest Group on Graphics and Interactive Techniques (SIGGRAPH)},<br>
 							Year={2024}<br>
 							}
 						</p>
@@ -579,7 +580,7 @@
 			<h4>LaplacianFusion: Detailed 3D Clothed-Human Body Reconstruction</h4>
 			<p class="text-muted">
 				Hyomin Kim, Hyeonseo Nam, Jungeon Kim, <b>Jaesik Park</b>, and Seungyong Lee.
-				<em>ACM (<b>SIGGRAPH Asia</b>), 2022</em>
+				<em>ACM Special Interest Group on Graphics and Interactive Techniques (<b>SIGGRAPH Asia</b>), 2022</em>
 				<br>(Accepted as a journal track paper)
 			</p>
 			<p>
@@ -593,7 +594,7 @@
 							@inproceedings{Kim_LaplacianFusion_SIGGRAPH_Asia_2022,<br>
 							Title={LaplacianFusion: Detailed 3D Clothed-Human Body Reconstruction},<br>
 							Author={Hyomin Kim and Hyeonseo Nam and Jungeon Kim and Jaesik Park and Seungyong Lee},<br>
-							Booktitle={Proceedings of the ACM (SIGGRAPH Asia)},<br>
+							Booktitle={Proceedings of the ACM Special Interest Group on Graphics and Interactive Techniques (SIGGRAPH Asia)},<br>
 							Year={2022}<br>
 							}
 						</p>
@@ -3738,7 +3739,7 @@
 			<h4>Tanks and Temples: Benchmarking Large-Scale Scene Reconstruction</h4>
 			<p class="text-muted">
 				Arno Knapitsch, <b>Jaesik Park</b>, Qian-Yi Zhou, and Vladlen Koltun.
-				<em>ACM Transactions on Graphics (<b>SIGGRAPH</b>), 2017</em>
+				<em>ACM Special Interest Group on Graphics and Interactive Techniques (<b>SIGGRAPH</b>), 2017</em>
 			</p>
 			<p>
 				<a href="https://www.tanksandtemples.org/" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
@@ -3755,7 +3756,7 @@
 							@inproceedings{Knapitsch_Tanks_SIGGRAPH_2017,<br>
 							Title={Tanks and Temples: Benchmarking Large-Scale Scene Reconstruction},<br>
 							Author={Arno Knapitsch and Jaesik Park and Qian-Yi Zhou and Vladlen Koltun},<br>
-							Booktitle={Proceedings of the ACM Transactions on Graphics (SIGGRAPH)},<br>
+							Booktitle={Proceedings of the ACM Special Interest Group on Graphics and Interactive Techniques (SIGGRAPH)},<br>
 							Year={2017}<br>
 							}
 						</p>
