--- a/publications.html
+++ b/publications.html
@@ -76,6 +76,7 @@
 				<br>(Accepted as a journal track paper)
 			</p>
 			<p>
+				<a href="https://arxiv.org/abs/2402.03690" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Choi_3Doodle_SIGGRAPH_2024_bibtex_button" aria-expanded="false" aria-controls="Choi_3Doodle_SIGGRAPH_2024_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Choi_3Doodle_SIGGRAPH_2024_bibtex_button">
