--- a/publications.html
+++ b/publications.html
@@ -67,6 +67,31 @@
 
 <div class="container">
 	<div class="row gx-5 gy-4">
+		<div class="col-lg-4 text-center" id="Lee_3D_ICML_2024">
+			<img src="publications/data/24_icml.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>3D Geometric Shape Assembly via Efficient Point Cloud Matching</h4>
+			<p class="text-muted">
+				Nahyuk Lee, Juhong Min, Junha Lee, Seungwook Kim, Kanghee Lee, <b>Jaesik Park</b>, and Minsu Cho.
+				<em>Int. Conf. on Machine Learning (<b>ICML</b>), 2024</em>
+			</p>
+			<p>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Lee_3D_ICML_2024_bibtex_button" aria-expanded="false" aria-controls="Lee_3D_ICML_2024_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Lee_3D_ICML_2024_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@inproceedings{Lee_3D_ICML_2024,<br>
+							Title={3D Geometric Shape Assembly via Efficient Point Cloud Matching},<br>
+							Author={Nahyuk Lee and Juhong Min and Junha Lee and Seungwook Kim and Kanghee Lee and Jaesik Park and Minsu Cho},<br>
+							Booktitle={Proceedings of the Int. Conf. on Machine Learning (ICML)},<br>
+							Year={2024}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="col-lg-4 text-center" id="Choi_3Doodle_SIGGRAPH_2024">
 			<img src="publications/data/24_siggraph.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4>3Doodle: Compact Abstraction of Objects with 3D Strokes</h4>
