--- a/publications.html
+++ b/publications.html
@@ -67,6 +67,32 @@
 
 <div class="container">
 	<div class="row gx-5 gy-4">
+		<div class="col-lg-4 text-center" id="Kang_Distilling_arXiv_2024">
+			<img src="publications/data/24_arxiv2.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>Distilling Diffusion Models into Conditional GANs</h4>
+			<p class="text-muted">
+				Minguk Kang, Richard Zhang, Connelly Barnes, Sylvain Paris, Suha Kwak, <b>Jaesik Park</b>, Eli Shechtman, Jun-Yan Zhu, and Taesung Park.
+				<em>2405.05967 (arXiv), 2024</em>
+			</p>
+			<p>
+				<a href="https://arxiv.org/abs/2405.05967" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kang_Distilling_arXiv_2024_bibtex_button" aria-expanded="false" aria-controls="Kang_Distilling_arXiv_2024_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Kang_Distilling_arXiv_2024_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@article{Kang_Distilling_arXiv_2024,<br>
+							Title={Distilling Diffusion Models into Conditional GANs},<br>
+							Author={Minguk Kang and Richard Zhang and Connelly Barnes and Sylvain Paris and Suha Kwak and Jaesik Park and Eli Shechtman and Jun-Yan Zhu and Taesung Park},<br>
+							Journal={2405.05967 (arXiv)},<br>
+							Year={2024}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="col-lg-4 text-center" id="Lee_3D_ICML_2024">
 			<img src="publications/data/24_icml.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4>3D Geometric Shape Assembly via Efficient Point Cloud Matching</h4>
