--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			<h2>Jaesik Park</h2>
 			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
-					<p class="lead">Hello! I am Jaesik Park at Seoul National University. Our research group, namely <a href="https://jaesik.info/lab">Visual & Geometric Intelligence Lab.</a> is looking for <mark>self-motivated students</mark>. Please <a href="http://jaesik.info/contact">apply our lab</a> if interested.</p>
+					<p class="lead">Hello! I am Prof. Jaesik Park at Seoul National University. Our research group, <a href="https://jaesik.info/lab">Visual & Geometric Intelligence Lab.</a>, is looking for <mark>self-motivated students</mark>. If interested, please <a href="http://jaesik.info/contact">apply to our lab</a>.</p>
 				</li>
 			</ul>
 			<button class="btn btn-outline-secondary shadow-sm" type="button" data-bs-toggle="collapse" data-bs-target="#bio" aria-expanded="false" aria-controls="bio">
