--- a/contact.html
+++ b/contact.html
@@ -67,9 +67,9 @@
 			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
 					<h3>To apply our lab</h3>
-					1) Please send your CV to me via email.<br>
-					2) I will announce online/offline meeting schedule.</br>
-					3) Please check out <a href="https://docs.google.com/document/d/1dOGK_GR5Z2Vc-cJd0s72FmINaHyiDmxvf-68IZcb_lU/edit?usp=sharing" target="_blank">this document.</a>
+					1) Please check out <a href="https://docs.google.com/document/d/1dOGK_GR5Z2Vc-cJd0s72FmINaHyiDmxvf-68IZcb_lU/edit?usp=sharing" target="_blank">this document.</a><br>
+					2) Please send your CV to me via email.<br>
+					3) Depending on the case, I will announce the online/offline meeting schedule.<br>
 				</li>
 			</ul>
 		</div>
