--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Jaesik Park is an Assistant Professor at <a href="https://en.snu.ac.kr/" target=
 			<h2>News</h2>
 			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
-					2024.05. Opening Post. Doc. position. If interested, please contact me (apply by end of May).
+					2024.05. Postdoctoral position is available. If interested, please contact me (apply by end of May).
 				</li>
 				<li class="list-group-item">
 					2024.05. I will serve as a Area Chair for <b>NeurIPS 2024</b>.
