--- a/publications.html
+++ b/publications.html
@@ -153,6 +153,7 @@
 				<em>Annual Conf. of the North American Chapter of the Assoc. for Computational Linguistics (<b>NAACL</b>), 2024</em>
 			</p>
 			<p>
+				<a href="https://arxiv.org/abs/2306.08498" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kim_Extending_NAACL_2024_bibtex_button" aria-expanded="false" aria-controls="Kim_Extending_NAACL_2024_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Kim_Extending_NAACL_2024_bibtex_button">
