--- a/source/html/lab.html
+++ b/source/html/lab.html
@@ -26,6 +26,18 @@
 			Ph.D. student
 		</div>
 		<div class="col-md-3 text-center">
+			<img src="source/members/tba.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<h5>In-Jae Lee</h5>
+			2024 Fall<br>
+			Ph.D. student
+		</div>
+		<div class="col-md-3 text-center">
+			<img src="source/members/tba.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<h5>Cheolhong Min</h5>
+			2024 Fall<br>
+			Ph.D. student
+		</div>
+		<div class="col-md-3 text-center">
 			<img src="source/members/pierre.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Pierre E. Musacchio</h5>
 			2023 Fall<br>
@@ -75,6 +87,12 @@
 			<img src="source/members/sangmin.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Sang Min Kim</h5>
 			2024 Spring<br>
+			Integrated Ph.D. student<br>
+		</div>
+		<div class="col-md-3 text-center">
+			<img src="source/members/namtae.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<h5>Namtae Kim</h5>
+			2024 Fall<br>
 			Integrated Ph.D. student<br>
 		</div>
 		<div class="col-md-3 text-center">
