--- a/source/html/lab.html
+++ b/source/html/lab.html
@@ -32,7 +32,7 @@
 			Ph.D. student
 		</div>
 		<div class="col-md-3 text-center">
-			<img src="source/members/tba.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<img src="source/members/cheolhong.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Cheolhong Min</h5>
 			2024 Fall<br>
 			Ph.D. student
