--- a/lab.html
+++ b/lab.html
@@ -70,7 +70,7 @@
 			Ph.D. student
 		</div>
 		<div class="col-md-3 text-center">
-			<img src="source/members/tba.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<img src="source/members/injae.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>In-Jae Lee</h5>
 			2024 Fall<br>
 			Ph.D. student
