--- a/data/news.html
+++ b/data/news.html
@@ -1,3 +1,4 @@
+2024.06. Two papers got accepted to <b>ECCV 2024</b>.
 2024.05. I will serve as a Area Chair for <b>NeurIPS 2024</b>.
 2024.05. A paper about 3D parts assembly is accepted to <b>ICML 2024</b>.
 2024.05. A paper about 3D strokes reconstruction from multi-view images is accepted to <b>SIGGRAPH 2024</b>.
