update pdf links

--- a/publications.html
+++ b/publications.html
@@ -126,6 +126,8 @@
 				<em>Int. Conf. on Machine Learning (<b>ICML</b>), 2024</em>
 			</p>
 			<p>
+				<a href="https://nahyuklee.github.io/pmtr/" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
+				<a href="https://github.com/NahyukLEE/pmtr" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Lee_3D_ICML_2024_bibtex_button" aria-expanded="false" aria-controls="Lee_3D_ICML_2024_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Lee_3D_ICML_2024_bibtex_button">
@@ -204,6 +206,7 @@
 				<em>Int. Conf. on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2024</em>
 			</p>
 			<p>
+				<a href="https://openaccess.thecvf.com/content/CVPR2024/papers/Kumar_Pick-or-Mix_Dynamic_Channel_Sampling_for_ConvNets_CVPR_2024_paper.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kumar_PickorMix_CVPR_2024_bibtex_button" aria-expanded="false" aria-controls="Kumar_PickorMix_CVPR_2024_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Kumar_PickorMix_CVPR_2024_bibtex_button">
@@ -229,6 +232,7 @@
 				<em>Int. Conf. on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2024</em>
 			</p>
 			<p>
+				<a href="https://openaccess.thecvf.com/content/CVPR2024/papers/Park_Learning_SO3-Invariant_Semantic_Correspondence_via_Local_Shape_Transform_CVPR_2024_paper.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Park_Learning_CVPR_2024_bibtex_button" aria-expanded="false" aria-controls="Park_Learning_CVPR_2024_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Park_Learning_CVPR_2024_bibtex_button">
