--- a/publications.html
+++ b/publications.html
@@ -256,7 +256,7 @@
 			<p class="text-muted">
 				Ashish Kumar, <b>Jaesik Park</b>, and Laxmidhar Behera.
 				<em>IEEE Robotics and Automation Letters (<b>RAL</b>), vol. 9, issue 1, 2024</em>
-				<br>(accepted for the <b>ICRA2024 oral</b> presentation)
+				<br>(invited to the <b>ICRA2024 oral</b> presentation)
 			</p>
 			<p>
 				<a href="https://ieeexplore.ieee.org/document/10305271" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
