--- a/publications.html
+++ b/publications.html
@@ -75,6 +75,7 @@
 				<em>European Conf. on Computer Vision (<b>ECCV</b>), 2024</em>
 			</p>
 			<p>
+				<a href="https://mingukkang.github.io/Diffusion2GAN/" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
 				<a href="https://arxiv.org/abs/2405.05967" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kang_Distilling_ECCV_2024_bibtex_button" aria-expanded="false" aria-controls="Kang_Distilling_ECCV_2024_bibtex_button">BibTeX</a>
 			</p>
