--- a/publications.html
+++ b/publications.html
@@ -128,6 +128,7 @@
 			</p>
 			<p>
 				<a href="https://nahyuklee.github.io/pmtr/" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
+				<a href="https://arxiv.org/abs/2407.10542" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a href="https://github.com/NahyukLEE/pmtr" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Lee_3D_ICML_2024_bibtex_button" aria-expanded="false" aria-controls="Lee_3D_ICML_2024_bibtex_button">BibTeX</a>
 			</p>
