--- a/lab.html
+++ b/lab.html
@@ -142,8 +142,17 @@
 		<div class="col-md-3 text-center">
 			<img src="source/members/milo.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Milo Deroussi</h5>
-			2024 Fall<br>
-			Exchange student (master)<br>
+			2024F - 2025F<br>
+			Exchange MS student<br>
+			Télécom SudParis (master)<br>
+			<a href="https://github.com/MiloDeroussi" target="_blank">Homepage</a>
+		</div>
+		<div class="col-md-3 text-center">
+			<img src="source/members/meikel.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
+			<h5>Meikel Kokowski</h5>
+			2024F - 2025F<br>
+			Exchange MS student (master)<br>
+			Technische Universität München<br>
 			<a href="https://github.com/MiloDeroussi" target="_blank">Homepage</a>
 		</div>
 	</div>
