--- a/lab.html
+++ b/lab.html
@@ -151,7 +151,7 @@
 			<img src="source/members/meikel.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Meikel Kokowski</h5>
 			2024F - 2025F<br>
-			Exchange MS student (master)<br>
+			Intern MS student (master)<br>
 			Technische Universität München<br>
 		</div>
 	</div>
