--- a/lab.html
+++ b/lab.html
@@ -144,14 +144,14 @@
 			<h5>Milo Deroussi</h5>
 			2024F - 2025F<br>
 			Exchange MS student<br>
-			Télécom SudParis (master)<br>
+			Télécom SudParis<br>
 			<a href="https://github.com/MiloDeroussi" target="_blank">Homepage</a>
 		</div>
 		<div class="col-md-3 text-center">
 			<img src="source/members/meikel.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Meikel Kokowski</h5>
 			2024F - 2025F<br>
-			Intern MS student (master)<br>
+			Intern MS student<br>
 			Technische Universität München<br>
 		</div>
 	</div>
