--- a/lab.html
+++ b/lab.html
@@ -111,7 +111,7 @@
 			<img src="source/members/daneul.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Daneul Kim</h5>
 			2023 Fall<br>
-			MS student<br>
+			Master's student<br>
 			<a href="https://carpedkm.github.io/" target="_blank">Homepage</a>
 		</div>
 		<div class="col-md-3 text-center">
@@ -143,7 +143,7 @@
 			<img src="source/members/milo.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Milo Deroussi</h5>
 			2024F - 2025F<br>
-			Exchange MS student<br>
+			Exchange master's student<br>
 			Télécom SudParis<br>
 			<a href="https://github.com/MiloDeroussi" target="_blank">Homepage</a>
 		</div>
@@ -151,7 +151,7 @@
 			<img src="source/members/meikel.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Meikel Kokowski</h5>
 			2024F - 2025F<br>
-			Intern MS student<br>
+			Intern master's student<br>
 			Technische Universität München<br>
 		</div>
 	</div>
