--- a/publications.html
+++ b/publications.html
@@ -156,7 +156,9 @@
 				<br>(Accepted as a journal track paper)
 			</p>
 			<p>
+				<a href="https://changwoonchoi.github.io/3Doodle/" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
 				<a href="https://arxiv.org/abs/2402.03690" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a href="https://github.com/changwoonchoi/3Doodle" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Choi_3Doodle_SIGGRAPH_2024_bibtex_button" aria-expanded="false" aria-controls="Choi_3Doodle_SIGGRAPH_2024_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Choi_3Doodle_SIGGRAPH_2024_bibtex_button">
