--- a/publications.html
+++ b/publications.html
@@ -77,6 +77,7 @@
 			<p>
 				<a href="https://mingukkang.github.io/Diffusion2GAN/" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
 				<a href="https://arxiv.org/abs/2405.05967" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a href="https://github.com/SNU-VGILab/e-latentlpips" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kang_Distilling_ECCV_2024_bibtex_button" aria-expanded="false" aria-controls="Kang_Distilling_ECCV_2024_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Kang_Distilling_ECCV_2024_bibtex_button">
