--- a/data/news.html
+++ b/data/news.html
@@ -1,3 +1,5 @@
+2024.09. A paper about brick assembly is accepted to Transactions on Machine Learning Research (<b>TMLR</b>).
+2024.09. A paper about fast drag-based image editing approach is accepted to <b>SIGGRAPH Asia 2024</b>.
 2024.06. Two papers got accepted to <b>ECCV 2024</b>.
 2024.05. I will serve as a Area Chair for <b>NeurIPS 2024</b>.
 2024.05. A paper about 3D parts assembly is accepted to <b>ICML 2024</b>.
