--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@ Jaesik Park is an Assistant Professor of <a href="https://cse.snu.ac.kr/" target
 			<h2>News</h2>
 			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
+					2024.09. A paper about brick assembly is accepted to Transactions on Machine Learning Research (<b>TMLR</b>).
+				</li>
+				<li class="list-group-item">
+					2024.09. A paper about fast drag-based image editing approach is accepted to <b>SIGGRAPH Asia 2024</b>.
+				</li>
+				<li class="list-group-item">
 					2024.06. Two papers got accepted to <b>ECCV 2024</b>.
 				</li>
 				<li class="list-group-item">
@@ -85,18 +91,18 @@ Jaesik Park is an Assistant Professor of <a href="https://cse.snu.ac.kr/" target
 				<li class="list-group-item">
 					2024.03. A paper about referring image segmentation is accepted to <b>NAACL 2024</b>.
 				</li>
-				<li class="list-group-item">
-					2024.02. Two papers got accepted to <b>CVPR 2024</b>.
-				</li>
-				<li class="list-group-item">
-					2024.01. Launching <a href="https://github.com/isl-org/Open3D/releases/tag/v0.18.0" target="_blank"><b>Open3D v0.18</b></a> (receiving 10.0k+1.6k GitHub stars).
-				</li>
 			</ul>
 			<button class="btn btn-outline-secondary shadow-sm" type="button" data-bs-toggle="collapse" data-bs-target="#previousNews" aria-expanded="false" aria-controls="previousNews">
 				Previous &#9661;
 			</button>
 			<div class="collapse" id="previousNews">
 				<ul class="list-group shadow-sm">
+					<li class="list-group-item">
+						2024.02. Two papers got accepted to <b>CVPR 2024</b>.
+					</li>
+					<li class="list-group-item">
+						2024.01. Launching <a href="https://github.com/isl-org/Open3D/releases/tag/v0.18.0" target="_blank"><b>Open3D v0.18</b></a> (receiving 10.0k+1.6k GitHub stars).
+					</li>
 					<li class="list-group-item">
 						2024.01. Our binary radiance field paper received the 30th <b>Samsung HumanTech Paper Award</b> (Silver Prize).
 					</li>
