--- a/publications.html
+++ b/publications.html
@@ -67,6 +67,56 @@
 
 <div class="container">
 	<div class="row gx-5 gy-4">
+		<div class="col-lg-4 text-center" id="Ahn_BudgetAware_TMLR_2024">
+			<img src="publications/data/24_tmlr.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4 class="em-tight">Budget-Aware Sequential Brick Assembly with Efficient Constraint Satisfaction</h4>
+			<p class="text-muted">
+				Seokjun Ahn, Jungtaek Kim, Minsu Cho, and <b>Jaesik Park</b>.
+				<em>Transactions on Machine Learning Research (<b>TMLR</b>), 2024</em>
+			</p>
+			<p>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Ahn_BudgetAware_TMLR_2024_bibtex_button" aria-expanded="false" aria-controls="Ahn_BudgetAware_TMLR_2024_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Ahn_BudgetAware_TMLR_2024_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@article{Ahn_BudgetAware_TMLR_2024,<br>
+							Title={Budget-Aware Sequential Brick Assembly with Efficient Constraint Satisfaction},<br>
+							Author={Seokjun Ahn and Jungtaek Kim and Minsu Cho and Jaesik Park},<br>
+							Journal={Transactions on Machine Learning Research (TMLR)},<br>
+							Year={2024}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-lg-4 text-center" id="Shin_InstantDrag_SIGGRAPH_Asia_2024">
+			<img src="publications/data/24_siggraph_asia.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>InstantDrag: Improving Interactivity in Drag-based Image Editing</h4>
+			<p class="text-muted">
+				Joonghyuk Shin, Daehyeon Choi, and <b>Jaesik Park</b>.
+				<em>ACM Special Interest Group on Graphics and Interactive Techniques (<b>SIGGRAPH Asia</b>), 2024</em>
+			</p>
+			<p>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Shin_InstantDrag_SIGGRAPH_Asia_2024_bibtex_button" aria-expanded="false" aria-controls="Shin_InstantDrag_SIGGRAPH_Asia_2024_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Shin_InstantDrag_SIGGRAPH_Asia_2024_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@inproceedings{Shin_InstantDrag_SIGGRAPH_Asia_2024,<br>
+							Title={InstantDrag: Improving Interactivity in Drag-based Image Editing},<br>
+							Author={Joonghyuk Shin and Daehyeon Choi and Jaesik Park},<br>
+							Booktitle={Proceedings of the ACM Special Interest Group on Graphics and Interactive Techniques (SIGGRAPH Asia)},<br>
+							Year={2024}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="col-lg-4 text-center" id="Kang_Distilling_ECCV_2024">
 			<img src="publications/data/24_arxiv2.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4>Distilling Diffusion Models into Conditional GANs</h4>
