--- a/publications.html
+++ b/publications.html
@@ -71,8 +71,9 @@
 			<img src="publications/data/24_tmlr.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4 class="em-tight">Budget-Aware Sequential Brick Assembly with Efficient Constraint Satisfaction</h4>
 			<p class="text-muted">
-				Seokjun Ahn, Jungtaek Kim, Minsu Cho, and <b>Jaesik Park</b>.
+				Seokjun Ahn*, Jungtaek Kim*, Minsu Cho, and <b>Jaesik Park</b>.
 				<em>Transactions on Machine Learning Research (<b>TMLR</b>), 2024</em>
+				<br>(*Joint first authors)
 			</p>
 			<p>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Ahn_BudgetAware_TMLR_2024_bibtex_button" aria-expanded="false" aria-controls="Ahn_BudgetAware_TMLR_2024_bibtex_button">BibTeX</a>
