--- a/data/news.html
+++ b/data/news.html
@@ -1,3 +1,4 @@
+2024.09. I will serve as an Area Chair for <b>CVPR 2025</b>.
 2024.09. A paper about brick assembly is accepted to Transactions on Machine Learning Research (<b>TMLR</b>).
 2024.09. A paper about fast drag-based image editing approach is accepted to <b>SIGGRAPH Asia 2024</b>.
 2024.06. Two papers got accepted to <b>ECCV 2024</b>.
