siggraph asia code and webpage link

--- a/publications.html
+++ b/publications.html
@@ -101,6 +101,8 @@
 				<em>ACM Special Interest Group on Graphics and Interactive Techniques (<b>SIGGRAPH Asia</b>), 2024</em>
 			</p>
 			<p>
+				<a href="https://joonghyuk.com/instantdrag-web/" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
+				<a href="https://github.com/SNU-VGILab/InstantDrag" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Shin_InstantDrag_SIGGRAPH_Asia_2024_bibtex_button" aria-expanded="false" aria-controls="Shin_InstantDrag_SIGGRAPH_Asia_2024_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Shin_InstantDrag_SIGGRAPH_Asia_2024_bibtex_button">
