--- a/publications.html
+++ b/publications.html
@@ -292,6 +292,7 @@
 			</p>
 			<p>
 				<a href="https://openaccess.thecvf.com/content/CVPR2024/papers/Kumar_Pick-or-Mix_Dynamic_Channel_Sampling_for_ConvNets_CVPR_2024_paper.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a href="https://github.com/ashishkumar822/PiX" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kumar_PickorMix_CVPR_2024_bibtex_button" aria-expanded="false" aria-controls="Kumar_PickorMix_CVPR_2024_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Kumar_PickorMix_CVPR_2024_bibtex_button">
