--- a/index.html
+++ b/index.html
@@ -71,7 +71,13 @@ Jaesik Park is an Assistant Professor of <a href="https://cse.snu.ac.kr/" target
 			<h2>News</h2>
 			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
-					2024.09. I will serve as an Area Chair for <b>CVPR 2025</b> and <b>ICLR 2025</b>.
+					2024.11. I will serve as an Action Editor for Transactions on Machine Learning Research (<b>TMLR</b>).
+				</li>
+				<li class="list-group-item">
+					2024.11. I will serve as a Lead Area Chair for <b>CVPR 2025</b>.
+				</li>
+				<li class="list-group-item">
+					2024.09. I will serve as an Area Chair for <b>ICLR 2025</b>.
 				</li>
 				<li class="list-group-item">
 					2024.09. A paper about brick assembly is accepted to Transactions on Machine Learning Research (<b>TMLR</b>).
@@ -85,18 +91,18 @@ Jaesik Park is an Assistant Professor of <a href="https://cse.snu.ac.kr/" target
 				<li class="list-group-item">
 					2024.05. I will serve as a Area Chair for <b>NeurIPS 2024</b>.
 				</li>
-				<li class="list-group-item">
-					2024.05. A paper about 3D parts assembly is accepted to <b>ICML 2024</b>.
-				</li>
-				<li class="list-group-item">
-					2024.05. A paper about 3D strokes reconstruction from multi-view images is accepted to <b>SIGGRAPH 2024</b>.
-				</li>
 			</ul>
 			<button class="btn btn-outline-secondary shadow-sm" type="button" data-bs-toggle="collapse" data-bs-target="#previousNews" aria-expanded="false" aria-controls="previousNews">
 				Previous &#9661;
 			</button>
 			<div class="collapse" id="previousNews">
 				<ul class="list-group shadow-sm">
+					<li class="list-group-item">
+						2024.05. A paper about 3D parts assembly is accepted to <b>ICML 2024</b>.
+					</li>
+					<li class="list-group-item">
+						2024.05. A paper about 3D strokes reconstruction from multi-view images is accepted to <b>SIGGRAPH 2024</b>.
+					</li>
 					<li class="list-group-item">
 						2024.03. A paper about referring image segmentation is accepted to <b>NAACL 2024</b>.
 					</li>
