--- a/lab.html
+++ b/lab.html
@@ -154,6 +154,18 @@
 			Intern master's student<br>
 			Technische Universität München<br>
 		</div>
+		<div class="col-md-3 text-center">
+			<img src="source/members/youngjoong.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<h5>YoungJoong Kim</h5>
+			2025 Spring<br>
+			Master's student<br>
+		</div>
+		<div class="col-md-3 text-center">
+			<img src="source/members/daeun.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
+			<h5>Daeun Lee</h5>
+			2025 Spring<br>
+			Master's student<br>
+		</div>
 	</div>
 </div>
 <div class="container mt-4">
