--- a/data/news.html
+++ b/data/news.html
@@ -1,3 +1,4 @@
+2024.12. I will serve as a Area Chair for <b>ICCV 2025</b>.
 2024.11. I will serve as an Action Editor for Transactions on Machine Learning Research (<b>TMLR</b>).
 2024.11. I will serve as a Lead Area Chair for <b>CVPR 2025</b>.
 2024.09. I will serve as an Area Chair for <b>ICLR 2025</b>.
