locality-aware 3DGS

--- a/publications.html
+++ b/publications.html
@@ -60,6 +60,49 @@
 <div class="container mt-4">
 <div class="row">
 	<div class="col-lg-12 text-start">
+		<h2>2025</h2>
+	</div>
+</div>
+</div>
+
+<div class="container">
+	<div class="row gx-5 gy-4">
+		<div class="col-lg-4 text-center" id="Shin_Localityaware_arXiv_2025">
+			<img src="publications/data/25_arxiv1.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4 class="em-tight">Locality-aware Gaussian Compression for Fast and High-quality Rendering</h4>
+			<p class="text-muted">
+				Seungjoo Shin, <b>Jaesik Park</b>, and Sunghyun Cho.
+				<em>2501.05757 (arXiv), 2025</em>
+			</p>
+			<p>
+				<a href="https://arxiv.org/abs/2501.05757" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Shin_Localityaware_arXiv_2025_bibtex_button" aria-expanded="false" aria-controls="Shin_Localityaware_arXiv_2025_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Shin_Localityaware_arXiv_2025_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@article{Shin_Localityaware_arXiv_2025,<br>
+							Title={Locality-aware Gaussian Compression for Fast and High-quality Rendering},<br>
+							Author={Seungjoo Shin and Jaesik Park and Sunghyun Cho},<br>
+							Journal={2501.05757 (arXiv)},<br>
+							Year={2025}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="container mt-4">
+	<hr class="py-1">
+</div>
+
+<div class="container mt-4">
+<div class="row">
+	<div class="col-lg-12 text-start">
 		<h2>2024</h2>
 	</div>
 </div>
